# WifiWeatherClock

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/: CMakeLists.txt
components/Hardware/: CMakeLists.txt  port_delay.c  port_delay.h  port_gpio.c  port_gpio.h  port_i2c.c  port_i2c.h  port_spi.c  port_spi.h
components/LVGL/: CMakeLists.txt
components/Network/: CMakeLists.txt  blufi_connect.c  blufi_connect.h  blufi_init.c  blufi_init.h  blufi_security.c  net_task.c  net_task.h
components/U8g2/: CMakeLists.txt  u8g2_d_memory.c  u8g2_d_setup.c  u8x8.h  u8x8_d_st7571.c
components/UI/: CMakeLists.txt  font.h  gui.c  gui.h  lcd_driver.c  lcd_driver.h  tft_demo.c  tft_demo.h  ui_init.c  ui_init.h  ui_task.c  ui_task.h
main/: CMakeLists.txt  bsp_config.c  bsp_config.h  main.c
